--- a/ui/style.css
+++ b/ui/style.css
@@ -20,3 +20,10 @@ body {
     height: 200px;
 }
 
+.container{
+    max-width: 800px;
+    padding-top: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin: 0 auto;
+}
